Reworked and expended 'stdlib/Double.java' The file now follows the jdk, the most important functions have been implemented and reworked when necessary. Some native functions, now unused, have been removed. Test files were adapted to cover all functionnalities developped for the 'Double' object.